tests/typescript/neg/lists/list-12.ts
/*@ listsum :: (list [{number| true}] + null) => list[number] */
function listsum(xs){
  var t = xs
  return t;
}

